Revision history for Perl extension Catalyst::Plugin::Starch.

{{$NEXT}}

 - Depend on latest Starch so that delete_session works in all
   cases that it works under Catalyst::Plugin::Session.

0.03 2015-07-20

 - Silently ignore invalid session IDs from cookies.

0.02 2015-07-16

 - Don't clear the state object in finalize_body to be more like
   Catalyst::Plugin::Session.
 - Fix several dependency issues.

0.01 2015-07-16

 - First version.
