@@ -2,6 +2,7 @@ Revision history for Perl extension Catalyst::Plugin::Starch.
 
 {{$NEXT}}
 
+ - Support update_session_cookie.
  - Depend on latest Starch so that delete_session works in all
    cases that it works under Catalyst::Plugin::Session.
 
